--- a/Dash_practice.Rmd
+++ b/Dash_practice.Rmd
@@ -10,6 +10,7 @@ output:
 ```{r setup, include=FALSE}
 library(flexdashboard)
 library(knitr)
+require(XLConnect)
 library(DT)
 library(rpivotTable)
 library(ggplot2)
@@ -165,7 +166,12 @@ datatable(data,
           caption = "US Population Income Illiteracy Data",
           rownames = T,
           filter = "top",
-          options = list(pageLength = 25))
+          extensions = 'Buttons',
+      options = list(
+        pageLength = 25,
+        dom = 'Blfrtip',
+        buttons = c('copy', 'csv', 'excel', 'pdf', 'print')
+      ))
 ```
 
 Pivot Table
